@@ -1,8 +1,6 @@
 package com.nhl.link.move.runtime.extractor.model;
 
 import com.nhl.link.move.extractor.model.ExtractorModelContainer;
-import com.nhl.link.move.runtime.LmRuntimeBuilder;
-import org.apache.cayenne.di.Inject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -11,29 +9,32 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.URL;
 
+/**
+ * @since 2.4
+ */
 public class URLExtractorModelLoader extends BaseExtractorModelLoader {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(URLExtractorModelLoader.class);
 
-	private URL rootUrl;
+    private URL baseUrl;
 
-	public URLExtractorModelLoader(@Inject(LmRuntimeBuilder.FILE_EXTRACTOR_MODEL_ROOT_DIR) URL rootUrl) {
-		LOGGER.info("Extractor XML files will be located under '{}'", rootUrl);
-		this.rootUrl = rootUrl;
-	}
+    public URLExtractorModelLoader(URL baseUrl) {
+        LOGGER.info("Extractor XML files will be located under '{}'", baseUrl);
+        this.baseUrl = baseUrl;
+    }
 
     @Override
     protected Reader getXmlSource(String name) throws IOException {
 
         if (!name.endsWith(".xml")) {
-			name = name + ".xml";
-		}
+            name = name + ".xml";
+        }
 
-        URL modelUrl = new URL(rootUrl, name);
+        URL modelUrl = new URL(baseUrl, name);
 
-        LOGGER.info("Will extractor XML from {}", modelUrl);
+        LOGGER.info("Will extract XML from {}", modelUrl);
 
-		return new InputStreamReader(modelUrl.openStream(), "UTF-8");
+        return new InputStreamReader(modelUrl.openStream(), "UTF-8");
     }
 
     @Override
